  - Markdown preview or diff during editing via web editor (Evgeniy Sokovikov)
  - Give the Rails cache its own Redis namespace
  - Add ability to set different ssh host, if different from http/https
  - Fix syntax highlighting for code comments blocks
  - Improve comments loading logic
  - Stop refreshing comments when the tab is hidden

v 6.8.0
  - Ability to at mention users that are participating in issue and merge req. discussion
  - Enabled GZip Compression for assets in example Nginx, make sure that Nginx is compiled with --with-http_gzip_static_module flag (this is default in Ubuntu)
  - Make user search case-insensitive (Christopher Arnold)
  - Remove omniauth-ldap nickname bug workaround
  - Drop all tables before restoring a Postgres backup
  - Make the repository downloads path configurable
  - Create branches via API (sponsored by O'Reilly Media)
  - Changed permission of gitlab-satellites directory not to be world accessible
  - Protected branch does not allow force push
  - Fix popen bug in `rake gitlab:satellites:create`
  - Disable connection reaping for MySQL
  - Allow oauth signup without email for twitter and github
  - Fix faulty namespace names that caused 500 on user creation
  - Option to disable standard login
  - Clean old created archives from repository downloads directory
  - Fix download link for huge MR diffs
  - Expose event and mergerequest timestamps in API
  - Fix emails on push service when only one commit is pushed

v 6.7.3
  - Fix the merge notification email not being sent (Pierre de La Morinerie)
  - Drop all tables before restoring a Postgres backup
  - Remove yanked modernizr gem

v 6.7.2
  - Fix upgrader script

v 6.7.1
  - Fix GitLab CI integration

v 6.7.0
  - Increased the example Nginx client_max_body_size from 5MB to 20MB, consider updating it manually on existing installations
  - Add support for Gemnasium as a Project Service (Olivier Gonzalez)
  - Add edit file button to MergeRequest diff